--- a/index.html
+++ b/index.html
@@ -7,19 +7,44 @@
         <link rel="stylesheet" href="ChrisKing.css">
     </head>
     <body class="body">
-        <h1>Chris King</h1>
-        <img src="king.2229.png" alt="Head Shot">
+        <div class=header>
+            <h1>Chris King</h1>
+            <div class=picture>
+                <img class=profilepic src="king.2229.png" alt="Head Shot">
+            </div>
+            <br>
+        </div>
+        <div class=resume>
+            <h2>Degree in Computer Science and Engineering from the Ohio State University</h2>
+            <h3>Specialization in Computer Graphics and Game Design</h3>
+            <a href="Chris King Resume.pdf" download>
+                Resume
+            </a>
+            <br>
+            <br>
+        </div>
         <br>
-        <a href="Chris King Resume.pdf" download>
-            Resume
-        </a>
+        <div class=vr>
+            <h2>Animation Capstone</h2>
+            <a href="https://drive.google.com/file/d/1Uc3XGNWAKJfi2dIsHNlDqX7_60A7GOx9/view?usp=sharing">
+                Save the Children Presents Eyes of Mariam
+            </a>
+            <br>
+            <br>
+            <div class=Kojo>
+                <img class=kojopic src="Kojo.jpg" alt="Kojo">
+            </div>
+            <br>
+        </div>
         <br>
-        <a href="https://drive.google.com/file/d/1Uc3XGNWAKJfi2dIsHNlDqX7_60A7GOx9/view?usp=sharing">
-            Save the Children Presents Eyes of Mariam
-        </a>
         <br>
-        <a href="https://dacking15.github.io/InteractiveMirror/">
-            COVID-19 Interactive Mirror
-        </a>
+        <div class=covid>
+            <h2>Data Visualization</h2>
+            <a href="https://dacking15.github.io/InteractiveMirror/">
+                COVID-19 Interactive Mirror
+            </a>
+            <br>
+            <br>
+        </div>
     </body>
 </html>
