Added covid pic

--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <div class=Kojo>
                 <img class=kojopic src="Kojo.jpg" alt="Kojo">
             </div>
+
+            <h2>Tested Platforms: Windows 10</h2>
+            <p class=description>This is a Virtual Reality experience built from the ground up in Unity. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, downlaod the zip file from the link above, extract the folder, and then run the .exe file.</p>
             <br>
         </div>
 
@@ -43,6 +46,13 @@
             <a href="https://dacking15.github.io/InteractiveMirror/">
                 COVID-19 Interactive Mirror
             </a>
+            <br>
+            <br>
+            <div class=CovidPic>
+                <img class=covidpic src="covid.png" alt="Kojo">
+            </div>
+            <h2>Tested Platforms: Google Chrome on Mac OS and Windows 10</h2>
+            <p class=description>This website allows you to compare COVID-19 data by country. This link has been confirmed to work on Google Chrome on Mac and Windows. </p>
             <br>
             <br>
         </div>
