--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
             </a>
             <br>
             <br>
-            <div class=Kojo>
+            <div class=kojoFrame>
                 <img class=kojopic src="Kojo.jpg" alt="Kojo">
             </div>
-
             <h2>Tested Platforms: Windows 10</h2>
             <p class=description>This is a Virtual Reality experience built from the ground up in Unity. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, downlaod the zip file from the link above, extract the folder, and then run the .exe file.</p>
             <br>
@@ -48,11 +47,22 @@
             </a>
             <br>
             <br>
-            <div class=CovidPic>
+            <div class=covidFrame>
                 <img class=covidpic src="covid.png" alt="Kojo">
             </div>
             <h2>Tested Platforms: Google Chrome on Mac OS and Windows 10</h2>
             <p class=description>This website allows you to compare COVID-19 data by country. This link has been confirmed to work on Google Chrome on Mac and Windows. </p>
+            <br>
+            <br>
+        </div>
+        
+        <div class=covid>
+            <h2>Independent Development</h2>
+            <div class=covidFrame>
+                <img class=covidpic src="tanks.png" alt="Kojo">
+            </div>
+            <h2>In Progress - Tanks 3D</h2>
+            <p class=description>This game is being built for Windows 10, Xbox One, and iOS. More information to come.</p>
             <br>
             <br>
         </div>
