--- a/index.html
+++ b/index.html
@@ -9,15 +9,13 @@
     <body class="body">
         <div class=header>
             <h1>Chris King</h1>
-            <h4>Last Update: 5:42 PM -  5/1/20</h4>
+            <h4>Last Update: 9:37 PM -  5/1/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
-            <br>
-        </div>
-        <div class=resume>
-            <h2>Degree in Computer Science and Engineering from the Ohio State University</h2>
-            <h3>Specialization in Computer Graphics and Game Design</h3>
+            <h2>The Ohio State University</h2>
+            <h3>Computer Science and Engineering</h3>
+            <h4>Computer Graphics and Game Design</h4>
             <a href="Chris King Resume.pdf" download>
                 Resume
             </a>
