Added Tanks 3D gameplay 1

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
         <link rel="stylesheet" href="ChrisKing.css">
     </head>
     <body class="body">
-        <div class=header>
+        <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 9:37 PM -  5/1/20</h4>
+            <h4>Last Update: 4:38 PM -  5/2/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -23,7 +23,7 @@
             <br>
         </div>
 
-        <div class=vr>
+        <div class=standardBlock>
             <h2>Animation Capstone</h2>
             <a href="https://drive.google.com/file/d/1Uc3XGNWAKJfi2dIsHNlDqX7_60A7GOx9/view?usp=sharing">
                 Save the Children Presents Eyes of Mariam
@@ -38,7 +38,7 @@
             <br>
         </div>
 
-        <div class=covid>
+        <div class=standardBlock>
             <h2>Data Visualization</h2>
             <a href="https://dacking15.github.io/InteractiveMirror/">
                 COVID-19 Interactive Mirror
@@ -54,10 +54,12 @@
             <br>
         </div>
         
-        <div class=covid>
+        <div class=standardBlock>
             <h2>Independent Development</h2>
-            <div class=covidFrame>
-                <img class=covidpic src="tanks.png" alt="Kojo">
+            <div class=tanksFrame>
+                <video class=video width="641" height="361" controls>
+                    <source src="Tanks3D_gameplay1.mp4" type="video/mp4">
+                </video>
             </div>
             <h2>In Progress - Tanks 3D</h2>
             <p class=description>This game is being built for Windows 10, Xbox One, and iOS. More information to come.</p>
