--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 10:39 PM -  5/4/20</h4>
+            <h4>Last Update: 7:50 PM -  5/5/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -34,7 +34,7 @@
                 <img class=kojopic src="Kojo.jpg" alt="Kojo">
             </div>
             <h2>Tested Platforms: Windows 10</h2>
-            <p class=description>This is a Virtual Reality experience built from the ground up in Unity. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, downlaod the zip file from the link above, extract the folder, and then run the .exe file.</p>
+            <p class=description>This is a Virtual Reality experience built from the ground up in Unity. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, download the zip file from the link above, extract the folder, and then run the .exe file.</p>
             <br>
         </div>
 
@@ -57,9 +57,9 @@
         <div class=standardBlock>
             <h2>Independent Development</h2>
             <div class=tanksFrame>
-                <video class=video width="641" height="361" controls>
-                    <source src="Tanks3D_gameplay3.mp4" type="video/mp4">
-                </video>
+                <iframe width="641" height="361"
+                        src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                </iframe>
             </div>
             <h2>In Progress - Tanks 3D</h2>
             <p class=description>This game is being built for Windows 10, Xbox One, and iOS. More information to come.</p>
