Youtube Link Fix

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 7:50 PM -  5/5/20</h4>
+            <h4>Last Update: 7:54 PM -  5/5/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -57,8 +57,8 @@
         <div class=standardBlock>
             <h2>Independent Development</h2>
             <div class=tanksFrame>
-                <iframe width="641" height="361"
-                        src="https://www.youtube.com/embed/tgbNymZ7vqY">
+                <iframe class=video width="641" height="361" 
+                        src="https://www.youtube.com/embed/SQIKCa2Z_ZI" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
             <h2>In Progress - Tanks 3D</h2>
