--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 8:30 PM -  5/8/20</h4>
+            <h4>Last Update: 8:38 PM -  5/8/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -55,14 +55,14 @@
         </div>
         
         <div class=standardBlock>
-            <h2>Independent Development</h2>
+            <h2>Tanks 3D</h2>
             <div class=tanksFrame>
                 <iframe class=video width="641" height="361" 
                         src="https://www.youtube.com/embed/ZwfE9jBj7gQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
                 </iframe>
             </div>
-            <h2>In Progress - Tanks 3D</h2>
-            <p class=description>This game is being built for Windows 10, Xbox One, and iOS. More information to come.</p>
+            <h2>Tested Platforms: Unity on Windows 10</h2>
+            <p class=description>Check out a sneak peak of my latest endeavor. Tanks 3D is a procedurally generated multiplayer game inspired by one of my favorite games, Tanks, on Addicting Games. The environment is different each time you play including different terrain, tree placement, and ground texture. Additionally, the ground is destructable and explosions result in craters. In a turn based model, each player attempts to locate and destroy their oponent. Although the game is in a very early alpha stage, the plan is to release it on Windows 10, Xbox One, WebGL, and potentially even iOS/Android. I still have a lot of features that I hope to add including online play. Please check back for updates on my progress!</p>
             <br>
             <br>
         </div>
