--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 8:38 PM -  5/8/20</h4>
+            <h4>Last Update: 10:11 PM -  5/8/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
             <h2>The Ohio State University</h2>
             <h3>Computer Science and Engineering</h3>
             <h4>Computer Graphics and Game Design</h4>
-            <a href="Chris King Resume.pdf" download>
+            <a href="Chris%20King%20May%202020%20Resume.pdf" download>
                 Resume
             </a>
             <br>
