--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
         </div>
         
         <div class=standardBlock>
+            <h2>Web Design</h2>
+            <a href="https://dacking15.github.io/MyAux/">
+                MyAux
+            </a>
+            <br>
+            <br>
+            <div class=covidFrame>
+                <img class=covidpic src="myaux.png" alt="aux">
+            </div>
+            <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+            <p class=description>This is one of my first websites that I created back in ACCAD 5140: Intermedia Web Design. MyAux is a proof of concept for a music social network where users can stay up to date with their favorite artists. Click on the link to try it out for yourself!</p>
+            <br>
+            <br>
+        </div>
+        
+        <div class=standardBlock>
             <h2>Tanks 3D</h2>
             <div class=tanksFrame>
                 <iframe class=video width="641" height="361" 
