--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 1:36 AM -  5/18/20</h4>
+            <h4>Last Update: 3:00 AM -  5/18/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -53,6 +53,22 @@
             <br>
             <br>
         </div>
+
+        <div class=standardBlock>
+            <h2>Unity Developent for WebGL</h2>
+            <a href="https://dacking15.github.io/Lab3/">
+                Particle Generator
+            </a>
+            <br>
+            <br>
+            <div class=covidFrame>
+                <img class=covidpic src="particle.png" alt="aux">
+            </div>
+            <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+            <p class=description>This animation started from Lab 3 of my Computer Game and Animation class at Ohio State. By pressing the space key, you can generate particles which then fall onto the scene and explode upon collision. You can also use the up and down arrows to alter the height at which the particles fall from. Click on the link to try it out for yourself!</p>
+            <br>
+            <br>
+        </div>
         
         <div class=standardBlock>
             <h2>Unity Developent for WebGL</h2>
@@ -65,7 +81,7 @@
                 <img class=covidpic src="maze.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This game started from Lab 2 of my Computer Game and Animation class at Ohio State. The maze is procedurally generated and there is guaranteed to be at least one reachable exit. Upon reviewing my labs from the class, I added proper movement and collision and created a WebGL build. Click on the link to try it out for yourself!</p>
+            <p class=description>This game started from Lab 2 of my Computer Game and Animation class at Ohio State. The maze is procedurally generated and there is guaranteed to be at least one reachable exit. Use the arrow keys or the wasd keys to control the red sphere. Additionally, you can press 0 to make the maze spin although it is a bit glitchy in WebGL. Click on the link to try it out for yourself!</p>
             <br>
             <br>
         </div>
