--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 3:00 AM -  5/18/20</h4>
+            <h4>Last Update: 6:52 PM -  5/18/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -54,6 +54,22 @@
             <br>
         </div>
 
+        <div class=standardBlock>
+            <h2>Unity Developent for WebGL</h2>
+            <a href="https://dacking15.github.io/Lab4/">
+                Predator vs Prey
+            </a>
+            <br>
+            <br>
+            <div class=covidFrame>
+                <img class=covidpic src="predator.png" alt="aux">
+            </div>
+            <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+            <p class=description>This animation started from Lab 4 of my Computer Game and Animation class at Ohio State. To demonstrate the predator vs prey model, one cheetah roams around the arena and attacks gazelle in its field of view. Click on the link to watch!</p>
+            <br>
+            <br>
+        </div>
+        
         <div class=standardBlock>
             <h2>Unity Developent for WebGL</h2>
             <a href="https://dacking15.github.io/Lab3/">
