--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 6:52 PM -  5/18/20</h4>
+            <h4>Last Update: 8:55 PM -  5/18/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -53,7 +53,23 @@
             <br>
             <br>
         </div>
-
+        
+        <div class=standardBlock>
+            <h2>Unity Developent for WebGL</h2>
+            <a href="https://dacking15.github.io/Lab8/">
+                Crazy Rollercoaster
+            </a>
+            <br>
+            <br>
+            <div class=covidFrame>
+                <img class=covidpic src="rollercoaster.png" alt="aux">
+            </div>
+            <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+            <p class=description>This animation as the final lab of my Computer Game and Animation class at Ohio State. Using Catmull Rom Spline Curves and a line renderer, the program creates a rollercoaster track in which you can take a scenic ride on. Click on the link to try it out!</p>
+            <br>
+            <br>
+        </div>
+        
         <div class=standardBlock>
             <h2>Unity Developent for WebGL</h2>
             <a href="https://dacking15.github.io/Lab4/">
