--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Chris King</h1>
-            <h4>Last Update: 8:55 PM -  5/18/20</h4>
+            <h4>Last Update: 3:30 AM -  5/25/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
@@ -22,7 +22,29 @@
             <br>
             <br>
         </div>
-
+        <div class=standardBlock>
+            <h2>Independent Unity Development</h2>
+            <a href="https://drive.google.com/file/d/1tT-IDbtfIEdRaA1YNm8qGcXn0vjJTCTR/view?usp=sharing">
+                Tanks 3D - Windows 10 Build
+            </a>
+            <br>
+            <a href="https://drive.google.com/file/d/1tT-IDbtfIEdRaA1YNm8qGcXn0vjJTCTR/view?usp=sharing">
+                Tanks 3D - Web GL Build
+            </a>
+            <br>
+            <a href="https://drive.google.com/file/d/17zlwyktAkVkoSAS7mygB7l8T4V9aqgcK/view?usp=sharing">
+                Controls
+            </a>
+            <br>
+            <br>
+            <div class=tanksFrame>
+                <img class=covidpic src="Tanks3D.png" alt="Tanks">
+            </div>
+            <h2>Tested Platforms: Windows 10, Google Chrome on Windows 10</h2>
+            <p class=description>Tanks 3D is a turn based multiplayer game built from the ground up in Unity. Each game is procedurally generated meaning that the terrain, ground texture, skybox, and tree placement will be different every time you play. The goal of the game is to destroy your opponents tank. Pay attention to the mini map, the wind speed, the wind direction, your shot angle, and your shot power level to succeed. Players have the option to use keyboard controls or an Xbox One controller. Please look at the controls before playing because they are relatively complex. There are currently two versions available. The first version that I would recommend playing is the Windows 10 build. In order to run this version, download the zip file from the link above, extract the folder, and then run the .exe file. The second version is the Web GL version. In order to run this version, download the zip file from the link above, extract the folder, and then run the .exe file. However, please be aware that the Web GL version does not run as well as the Windows 10 version. Lastly, please keep in mind that this is my most ambitious project yet. There will be bugs. On occasion, a tank will fall through the map at the beginning of the game. If this happens, simply reload the game. I hope you enjoy and and I hope you try playing Tanks 3D against a friend! </p>
+            <br>
+            <br>
+        </div>
         <div class=standardBlock>
             <h2>Animation Capstone</h2>
             <a href="https://drive.google.com/file/d/1Uc3XGNWAKJfi2dIsHNlDqX7_60A7GOx9/view?usp=sharing">
@@ -130,19 +152,6 @@
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
             <p class=description>This is one of my first websites that I created back in ACCAD 5140: Intermedia Web Design. MyAux is a proof of concept for a music social network where users can stay up to date with their favorite artists. Click on the link to try it out for yourself!</p>
-            <br>
-            <br>
-        </div>
-        
-        <div class=standardBlock>
-            <h2>In Progress</h2>
-            <div class=tanksFrame>
-                <iframe class=video width="641" height="361" 
-                        src="https://www.youtube.com/embed/ZwfE9jBj7gQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen>
-                </iframe>
-            </div>
-            <h2>Tested Platforms: Unity on Windows 10</h2>
-            <p class=description>Check out a sneak peak of my latest endeavor. Tanks 3D is a procedurally generated multiplayer game inspired by one of my favorite games, Tanks, on Addicting Games. The environment is different each time you play including different terrain, tree placement, and ground texture. Additionally, the ground is destructable and explosions result in craters. In a turn based model, each player attempts to locate and destroy their oponent. Although the game is in a very early alpha stage, the plan is to release it on Windows 10, Xbox One, WebGL, and potentially even iOS/Android. I still have a lot of features that I hope to add including online play. Please check back for updates on my progress!</p>
             <br>
             <br>
         </div>
