--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
     </head>
     <body class="body">
         <div class=standardBlock>
-            <h1>Chris King</h1>
-            <h4>Last Update: 3:35 AM -  5/25/20</h4>
+            <h1>Christopher James King</h1>
+            <h4>Last Update: 4:46 PM -  5/25/20</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
             <h2>The Ohio State University</h2>
-            <h3>Computer Science and Engineering</h3>
-            <h4>Computer Graphics and Game Design</h4>
-            <a href="Chris%20King%20May%202020%20Resume.pdf" download>
+            <h3>Bachelor of Science in Computer Science and Engineering</h3>
+            <h4>Specialization in Computer Graphics and Game Design</h4>
+            <a href="Chris King May 25, 2020 Resume.pdf" download>
                 Resume
             </a>
             <br>
@@ -51,12 +51,16 @@
                 Save the Children Presents Eyes of Mariam
             </a>
             <br>
+            <a href="https://www.equality-lab.org/our-projects">
+                Equality Lab Projects Page
+            </a>
+            <br>
             <br>
             <div class=kojoFrame>
                 <img class=kojopic src="Kojo.jpg" alt="Kojo">
             </div>
             <h2>Tested Platforms: Windows 10</h2>
-            <p class=description>This is a Virtual Reality experience built from the ground up in Unity. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, download the zip file from the link above, extract the folder, and then run the .exe file.</p>
+            <p class=description>This is a Virtual Reality experience built from the ground up in Unity. In my Animation Capstone, I was tasked with developing a VR experience for the Oculus Quest that brought attention to the consequences of impeding child education. The result is a brief, but impactful experience that was chosen to be developed further by Equality Lab and is featured on their website. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, download the zip file from the link above, extract the folder, and then run the .exe file.</p>
             <br>
         </div>
 
@@ -71,7 +75,7 @@
                 <img class=covidpic src="covid.png" alt="Kojo">
             </div>
             <h2>Tested Platforms: Google Chrome on Mac OS and Windows 10</h2>
-            <p class=description>This website allows you to compare COVID-19 data by country. This link has been confirmed to work on Google Chrome on Mac and Windows. </p>
+            <p class=description>This website allows you to compare COVID-19 data by country. In my final semester at Ohio State, I was tasked with representing data in an effective fashion while showcasing the principles of data visualization. The result is a website which compares COVID-19 data using a novel interactive mirror concept which improves upon the typical bidirectional bar chart graph </p>
             <br>
             <br>
         </div>
@@ -87,7 +91,7 @@
                 <img class=covidpic src="rollercoaster.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This animation as the final lab of my Computer Game and Animation class at Ohio State. Using Catmull Rom Spline Curves and a line renderer, the program creates a rollercoaster track in which you can take a scenic ride on. Click on the link to try it out!</p>
+            <p class=description>This animation began as the final lab of my Computer Game and Animation class at Ohio State. Using Catmull Rom Spline Curves and a line renderer, the program creates a rollercoaster track in which you can take a scenic ride on. Click on the link to try it out!</p>
             <br>
             <br>
         </div>
@@ -103,7 +107,7 @@
                 <img class=covidpic src="predator.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This animation started from Lab 4 of my Computer Game and Animation class at Ohio State. To demonstrate the predator vs prey model, one cheetah roams around the arena and attacks gazelle in its field of view. Click on the link to watch!</p>
+            <p class=description>This animation began as Lab 4 of my Computer Game and Animation class at Ohio State. To demonstrate the predator vs prey model, one cheetah roams around the arena and attacks gazelle in its field of view. Click on the link to watch!</p>
             <br>
             <br>
         </div>
@@ -119,7 +123,7 @@
                 <img class=covidpic src="particle.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This animation started from Lab 3 of my Computer Game and Animation class at Ohio State. By pressing the space key, you can generate particles which then fall onto the scene and explode upon collision. You can also use the up and down arrows to alter the height at which the particles fall from. Click on the link to try it out for yourself!</p>
+            <p class=description>This animation began as Lab 3 of my Computer Game and Animation class at Ohio State. By pressing the space key, you can generate particles which then fall onto the scene and explode upon impact. You can also use the up and down arrows to alter the height at which the particles fall from. Click on the link to try it out for yourself!</p>
             <br>
             <br>
         </div>
@@ -135,7 +139,7 @@
                 <img class=covidpic src="maze.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This game started from Lab 2 of my Computer Game and Animation class at Ohio State. The maze is procedurally generated and there is guaranteed to be at least one reachable exit. Use the arrow keys or the wasd keys to control the red sphere. Additionally, you can press 0 to make the maze spin although it is a bit glitchy in WebGL. Click on the link to try it out for yourself!</p>
+            <p class=description>This game began as Lab 2 of my Computer Game and Animation class at Ohio State. The maze is procedurally generated and there is guaranteed to be at least one reachable exit. Use the arrow keys or the wasd keys to control the red sphere. Additionally, you can press 0 to make the maze spin. Click on the link to try it out for yourself!</p>
             <br>
             <br>
         </div>
@@ -151,7 +155,7 @@
                 <img class=covidpic src="myaux.png" alt="aux">
             </div>
             <h2>Tested Platforms: Google Chrome on Windows 10</h2>
-            <p class=description>This is one of my first websites that I created back in ACCAD 5140: Intermedia Web Design. MyAux is a proof of concept for a music social network where users can stay up to date with their favorite artists. Click on the link to try it out for yourself!</p>
+            <p class=description>This is one of my first websites that I created back in ACCAD 5140: Intermedia Web Design. MyAux is a proof of concept for a music related social media website where users can stay up to date with your favorite artists. Click on the link to try it out for yourself!</p>
             <br>
             <br>
         </div>
