--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <body class="body">
         <div class=standardBlock>
             <h1>Christopher James King</h1>
-            <h4>Last Update: 4:46 PM -  5/25/20</h4>
+            <h4>Last Update: 7:00 PM - August 4th, 2020</h4>
             <div class=picture>
                 <img class=profilepic src="king.2229.png" alt="Head Shot">
             </div>
             <h2>The Ohio State University</h2>
             <h3>Bachelor of Science in Computer Science and Engineering</h3>
             <h4>Specialization in Computer Graphics and Game Design</h4>
-            <a href="Chris King May 25, 2020 Resume.pdf" download>
+            <a href="Chris King August 4, 2020 Resume.pdf" download>
                 Resume
             </a>
             <br>
