--- a/projects.html
+++ b/projects.html
@@ -10,72 +10,76 @@
     <body class="body">
         
         <div class=menu>
+
             <div>
                 <a href="index.html">Home Page</a>
             </div>
-            <div onclick="(          
-                function(){
-                    console.log(window);
-                    window.scrollTo({top: 0, behavior: 'smooth'});
-                }        
-            )();">
-                EQHUB
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight, behavior: 'smooth'});
-                }        
-            )();">
-                Tanks 3D
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*2, behavior: 'smooth'});
-                }        
-            )();">
-                Save the Children
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*3, behavior: 'smooth'});
-                }        
-            )();">
-                Interactive Mirror
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*4, behavior: 'smooth'});
-                }        
-            )();">
-                Crazy Rollercoaster
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*5, behavior: 'smooth'});
-                }        
-            )();">
-                    Predator vs Prey
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*6, behavior: 'smooth'});
-                }        
-            )();">
-                Particle Generator
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*7, behavior: 'smooth'});
-                }        
-            )();">
-                Maze Game
-            </div>
-            <div onclick="(          
-                function(){
-                    window.scrollTo({top: window.innerHeight*8, behavior: 'smooth'});
-                }        
-            )();">
-                My Aux
+        
+            <div class=centered-menu>
+                <div onclick="(          
+                    function(){
+                        console.log(window);
+                        window.scrollTo({top: 0, behavior: 'smooth'});
+                    }        
+                )();">
+                    EQHUB
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight, behavior: 'smooth'});
+                    }        
+                )();">
+                    Tanks 3D
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*2, behavior: 'smooth'});
+                    }        
+                )();">
+                    Save the Children
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*3, behavior: 'smooth'});
+                    }        
+                )();">
+                    Interactive Mirror
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*4, behavior: 'smooth'});
+                    }        
+                )();">
+                    Crazy Rollercoaster
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*5, behavior: 'smooth'});
+                    }        
+                )();">
+                        Predator vs Prey
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*6, behavior: 'smooth'});
+                    }        
+                )();">
+                    Particle Generator
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*7, behavior: 'smooth'});
+                    }        
+                )();">
+                    Maze Game
+                </div>
+                <div onclick="(          
+                    function(){
+                        window.scrollTo({top: window.innerHeight*8, behavior: 'smooth'});
+                    }        
+                )();">
+                    My Aux
+                </div>
             </div>
         </div>
 
@@ -85,7 +89,7 @@
                 <div>
                 <div>
                     <h1>Contract Mozilla Hubs Development</h1>
-                    <h2>Tested Platforms: iPhone 7, iPhone SE 2020, Google Chrome, Safari</h2>
+
                     <a href="https://go.equalitylab.org/gszTJYV/room-11-11-2020-9-22-pm/">
                         Show Room
                     </a>
@@ -115,8 +119,8 @@
                     <a href="https://drive.google.com/file/d/17zlwyktAkVkoSAS7mygB7l8T4V9aqgcK/view?usp=sharing">
                         Controls
                     </a>
-                    <h2>Tested Platforms: Windows 10, Google Chrome on Windows 10</h2>
-                    <p class=description>Tanks 3D is a turn based multiplayer game built from the ground up in Unity. Each game is procedurally generated meaning that the terrain, ground texture, skybox, and tree placement will be different every time you play. The goal of the game is to destroy your opponents tank. Pay attention to the mini map, the wind speed, the wind direction, your shot angle, and your shot power level to succeed. Players have the option to use keyboard controls or an Xbox One controller. Please look at the controls before playing because they are relatively complex. There are currently two versions available. The first version that I would recommend playing is the Windows 10 build. In order to run this version, download the zip file from the link above, extract the folder, and then run the .exe file. The second version is the Web GL version. In order to run this version, download the zip file from the link above, extract the folder, and then run the .html file. However, please be aware that the Web GL version does not run as well as the Windows 10 version. Lastly, please keep in mind that this is my most ambitious project yet. There will be bugs. On occasion, a tank will fall through the map at the beginning of the game. If this happens, simply reload the game. I hope you enjoy and and I hope you try playing Tanks 3D against a friend! </p>
+
+                    <p class=description>Each game is procedurally generated The goal of the game is to destroy your opponents tank. Pay attention to the mini map, the wind speed, the wind direction, your shot angle, and your shot power level to succeed. Players have the option to use keyboard controls or an Xbox One controller. Please look at the controls before playing. </p>
                     <br>
                     <br>
                 </div>       
@@ -139,8 +143,7 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Windows 10</h2>
-                <p class=description>This is a Virtual Reality experience built from the ground up in Unity. In my Animation Capstone, I was tasked with developing a VR experience for the Oculus Quest that brought attention to the consequences of impeding child education. The result is a brief, but impactful experience that was chosen to be developed further by Equality Lab and is featured on their website. The download link above is for the non-VR build that can be played with either a mouse and keyboard or an Xbox One controller. In order to run, download the zip file from the link above, extract the folder, and then run the .exe file.</p>
+                <p class=description>In my Animation Capstone, I was tasked with developing a VR experience for the Oculus Quest that brought attention to the consequences of impeding child education. This impactful experience that was chosen to be developed further by Equality Lab and is featured on their website. It can be played with either a mouse and keyboard or an Xbox One controller.</p>
                 <br>
             </div>    
         </div>
@@ -156,7 +159,7 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Mac OS and Windows 10</h2>
+
                 <p class=description>This website allows you to compare COVID-19 data by country. In my final semester at Ohio State, I was tasked with representing data in an effective fashion while showcasing the principles of data visualization. The result is a website which compares COVID-19 data using a novel interactive mirror concept which improves upon the typical bidirectional bar chart graph </p>
                 <br>
                 <br>                
@@ -174,7 +177,7 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+
                 <p class=description>This animation began as the final lab of my Computer Game and Animation class at Ohio State. Using Catmull Rom Spline Curves and a line renderer, the program creates a rollercoaster track in which you can take a scenic ride on. Click on the link to try it out!</p>
                 <br>
                 <br>
@@ -192,7 +195,6 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Windows 10</h2>
                 <p class=description>This animation began as Lab 4 of my Computer Game and Animation class at Ohio State. To demonstrate the predator vs prey model, one cheetah roams around the arena and attacks gazelle in its field of view. Click on the link to watch!</p>
                 <br>
                 <br>
@@ -213,7 +215,6 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Windows 10</h2>
                 <p class=description>This animation began as Lab 3 of my Computer Game and Animation class at Ohio State. By pressing the space key, you can generate particles which then fall onto the scene and explode upon impact. You can also use the up and down arrows to alter the height at which the particles fall from. Click on the link to try it out for yourself!</p>
                 <br>
                 <br>
@@ -230,7 +231,7 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Windows 10</h2>
+
                 <p class=description>This game began as Lab 2 of my Computer Game and Animation class at Ohio State. The maze is procedurally generated and there is guaranteed to be at least one reachable exit. Use the arrow keys or the wasd keys to control the red sphere. Additionally, you can press 0 to make the maze spin. Click on the link to try it out for yourself!</p>
                 <br>
                 <br>
@@ -248,7 +249,6 @@
                 </a>
                 <br>
                 <br>
-                <h2>Tested Platforms: Google Chrome on Windows 10</h2>
                 <p class=description>This is one of my first websites that I created back in ACCAD 5140: Intermedia Web Design. MyAux is a proof of concept for a music related social media website where users can stay up to date with your favorite artists. Click on the link to try it out for yourself!</p>
                 <br>
                 <br>
