forgot to save files

--- a/index.html
+++ b/index.html
@@ -24,10 +24,15 @@
                         Resume
                     </a>
                     <br>
-                    <br>
+                    <p>
+                        Last Update: August 2020
+                    </p>
                     <a href="projects.html">
                         Projects
                     </a>
+                    <p>
+                        Last Update: 12/11/20 - 10:40 PM
+                    </p>
                 </div>
             </div>
         </div>
