--- a/projects.html
+++ b/projects.html
@@ -12,7 +12,9 @@
         <div class=menu>
 
             <div>
-                <a href="index.html">Home Page</a>
+                <div>
+                    <a href="index.html">Home Page</a>
+                </div>
             </div>
         
             <div class=centered-menu>
