Removed EQHUB link

--- a/projects.html
+++ b/projects.html
@@ -107,9 +107,7 @@
             <br>
             
              <p class=title>
-                <a href="https://go.equalitylab.org/gszTJYV/room-11-11-2020-9-22-pm/" target="_blank">
-                    EQHUB
-                </a>
+                 EQHUB (In Development)
             </p>  
             
             <br>
