--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
                     </a>
                     <br>
                     <p>
-                        Last Update: August 2020
+                        Last Update: 8/31/21
                     </p>
                     <a href="projects.html">
                         Projects
                     </a>
                     <p>
-                        Last Update: 12/14/20 - 3:00 PM
+                        Last Update: 12/14/20
                     </p>
                 </div>
             </div>
