Updated Chris King Creation Link

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>
                         Last Update: 12/14/20
                     </p>
-                    <a href="projects.html">
+                    <a href="https://dacking15.github.io/chris-king-creation/">
                         Chris King Creation
                     </a>
                     <p>
