--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <head class="head">
         <title>Chris King</title>
         <link rel="stylesheet" href="index.css">
+        <link rel="icon" href="assets/favicon.ico">
     </head>
     
     <body>
