--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
                     Computer Graphics and Game Design
                     <br>
                     <br>
-                    <a href="assets/resume.pdf" download>
+                    <a href="assets/Chris King Development Resume.pdf" download>
                         Resume
                     </a>
                     <br>
                     <p>
-                        Last Update: 1/9/23
+                        Last Update: 1/11/23
                     </p>
                     <a href="projects.html">
                         Projects
