--- a/index.html
+++ b/index.html
@@ -18,39 +18,7 @@
   <body class="min-vh-100">
     <div class="container-fluid min-vh-100">
       <div class="row min-vh-100 g-0">
-        <div class="col-12 col-md-3 d-flex flex-column align-items-center text-center border-end pe-md-4 pt-3 pb-5 min-vh-100">
-          <div class="w-100 d-flex justify-content-start mb-4">
-            <a
-              href="assets/Chris King Development Resume.pdf"
-              download
-              class="resume-icon text-decoration-none d-flex align-items-center justify-content-center rounded-circle bg-light border border-primary"
-              title="Download Resume"
-              style="width: 50px; height: 50px;"
-            >
-              <i class="bi bi-file-earmark-text text-primary fs-4"></i>
-            </a>
-          </div>
-          <img src="assets/paws.jpg" alt="Head Shot"
-            class="rounded-circle shadow mb-4"
-            style="width: 150px; height: 150px; object-fit: cover;"
-          />
-          <h1 class="mb-3 h4 fw-bold">Christopher James King</h1>
-          <ul class="list-unstyled text-muted mb-0">
-            <li class="mb-2 d-flex align-items-center justify-content-center gap-2">
-              <img src="assets/Block O.png" 
-                   alt="Ohio State Logo" 
-                   style="width: 24px; height: 24px; object-fit: contain;">
-              The Ohio State University
-            </li>
-            <li class="mb-2">BS Computer Science and Engineering</li>
-            <li class="small text-secondary">Computer Graphics and Game Design</li>
-          </ul>
-          <div class="mt-4 w-100 d-flex flex-column align-items-center flex-grow-1 justify-content-center">
-            <ul id="projects-list" class="list-unstyled w-100">
-              <!-- Projects list will be populated by JavaScript -->
-            </ul>
-          </div>
-        </div>
+        <div id="sidebar-container" class="col-12 col-md-3"></div>
         <div class="col-12 col-md-9 p-0" style="overflow-y: auto; max-height: 100vh;">
           <div id="projects-container" class="d-flex flex-column">
             <!-- Projects will be populated by JavaScript from projects-data.js -->
@@ -62,40 +30,19 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"></script>
+    <!-- Sidebar -->
+    <script src="sidebar.js"></script>
     <!-- Projects Data -->
     <script src="projects-data.js"></script>
     <script>
-      // Render projects list in sidebar
-      const projectsList = document.getElementById('projects-list');
-      if (projectsList) {
-        projectsList.innerHTML = projectsData.map(project => renderProjectListItem(project)).join('');
-      }
+      // Load sidebar (no current project for index page)
+      loadSidebar();
 
       // Render project cards
       const projectsContainer = document.getElementById('projects-container');
       if (projectsContainer) {
         projectsContainer.innerHTML = projectsData.map(project => renderProjectCard(project)).join('');
       }
-
-      // Handle smooth scrolling for project links
-      document.addEventListener('click', function(e) {
-        if (e.target.matches('a[href^="#project-"]')) {
-          e.preventDefault();
-          const targetId = e.target.getAttribute('href');
-          const targetElement = document.querySelector(targetId);
-          if (targetElement) {
-            const scrollContainer = document.querySelector('.col-12.col-md-9');
-            const containerTop = scrollContainer.getBoundingClientRect().top;
-            const elementTop = targetElement.getBoundingClientRect().top;
-            const offset = elementTop - containerTop + scrollContainer.scrollTop;
-            scrollContainer.scrollTo({
-              top: offset,
-              behavior: 'smooth'
-            });
-          }
-        }
-      });
-
     </script>
   </body>
 </html>
